# scale-chord

./: LICENSE  README.md  pyproject.toml
scale_chord/: __main__.py  guitar.py  guitar_viewer.py  logic.py  model.py  scale.py  usecase.py
tests/: test_guitar_viewer.py  test_model.py
