[tool.poetry]
name = "scale-chord"
version = "0.1.0"
description = ""
authors = ["inaba1115 <inaba1115@gmail.com>"]
readme = "README.md"
packages = [{include = "scale_chord"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
